# transcoder

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: clang-tools.yml  cmake-multi-platform.yml  codeql.yml  release.yml
cmake/: config.cmake.in
test/: CMakeLists.txt  cme_eg.hpp  dummy.hpp  eobi_eg.hpp  eobi_test.cpp  sbe.hpp  sbe_test.cpp  traits_test.cpp  transcoder_test.cpp
transcoder/: CMakeLists.txt  basic_types.hpp  byte_order.hpp  error.hpp  flyweight.hpp  io.hpp  options.hpp  tagged_t.hpp  traits.hpp  transcoder.hpp  type_name.hpp
transcoder/detail/: byte_order.hpp  decoder.hpp  describe.hpp  encoder.hpp  options.hpp  sint.hpp  sizeof.hpp  tagged_t.hpp  tagged_t_17.hpp  tuple.hpp  type_order.hpp  utils.hpp  vdecoder.hpp
transcoder/detail/utils/: sizeof.hpp  utils.hpp
